--- a/index.html
+++ b/index.html
@@ -452,6 +452,31 @@ DESCRIPTION: A psychological odyssey tracing fractured minds within a crumbling 
                         </div>
                     </div>
                 </div>
+                <div class="card-wrapper rounded-lg" tabindex="0" data-title="Psychological Neurosis in Pakistan" data-year="2021" data-role="Main Villain">
+                    <div class="movie-card">
+                         <!-- Placeholder images used for demonstration -->
+                        <img src="stole.png" alt="Psychological Neurosis in Pakistan">
+                    </div>
+                    <!-- New Horizontal Detail Panel -->
+                    <div class="horizontal-pop-up flex p-4 shadow-2xl">
+                        <div class="w-2/5 h-full rounded-l-md overflow-hidden mr-4">
+                             <!-- Expanded Image Preview -->
+                             <img src="stole.png" alt="Psychological Neurosis in Pakistan Preview" class="w-full h-full object-cover">
+                        </div>
+                        <div class="w-3/5 space-y-2">
+                            <h3 class="text-2xl font-bold text-primary-red">Stolen Laughter</h3>
+                            <p class="text-xs text-white/70">2021 | ROLE: MAIN VILLAIN</p>
+                           <p class="text-sm italic text-white/90">
+DESCRIPTION: A haunting exploration of stolen innocence — delving into the silent agony of child laborers trapped between survival and forgotten dreams. 
+
+</p>
+
+                            <button class="px-3 py-1 bg-primary-red text-black font-semibold rounded-full text-xs hover:bg-white transition">
+                                VIEW DETAILS
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -589,3 +614,4 @@ DESCRIPTION: A psychological odyssey tracing fractured minds within a crumbling 
        
 </body>
 </html>
+
