--- a/index.html
+++ b/index.html
@@ -427,22 +427,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="horizontal-pop-up flex p-4 shadow-2xl">
-                        <div class="w-2/5 h-full rounded-l-md overflow-hidden mr-4">
-                             <img src="abdus.png" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=NEUROSIS'" alt="Psychological Neurosis in Pakistan Preview" class="w-full h-full object-cover">
-                        </div>
-                        <div class="w-3/5 space-y-2">
-                            <h3 class="text-xl sm:text-2xl font-bold text-primary-red">A life in Science</h3>
-                            <p class="text-xs">2021 | ROLE: MAIN VILLAIN</p>
-                           <p class="text-sm italic">DESCRIPTION: A psychological odyssey tracing fractured minds within a crumbling society — exploring identity, faith, and collective madness through cinematic surrealism.
-</p>
-                            <button class="px-3 py-1 bg-primary-red text-black font-semibold rounded-full text-xs hover:bg-white transition">
-                                VIEW DETAILS
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
+                
                 <!-- MOVIE CARD 6 - "REGRET" -->
                 <div class="card-wrapper rounded-lg" tabindex="0" data-title="REGRET" data-year="2019" data-role="Director">
                     <div class="movie-card">
@@ -459,6 +444,22 @@
                             <p class="text-sm italic">
                                 DESCRIPTION: A meditative film focusing on the choices and decision we regret, the indecision to act. IT will make your rethink your life choices.
                             </p>
+                            <button class="px-3 py-1 bg-primary-red text-black font-semibold rounded-full text-xs hover:bg-white transition">
+                                VIEW DETAILS
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!---Movie--->
+                 <div class="horizontal-pop-up flex p-4 shadow-2xl">
+                        <div class="w-2/5 h-full rounded-l-md overflow-hidden mr-4">
+                             <img src="abdus.png" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=NEUROSIS'" alt="Psychological Neurosis in Pakistan Preview" class="w-full h-full object-cover">
+                        </div>
+                        <div class="w-3/5 space-y-2">
+                            <h3 class="text-xl sm:text-2xl font-bold text-primary-red">Psychological Neurosis in Pakistan</h3>
+                            <p class="text-xs">2021 | ROLE: MAIN VILLAIN</p>
+                           <p class="text-sm italic">DESCRIPTION: A psychological odyssey tracing fractured minds within a crumbling society — exploring identity, faith, and collective madness through cinematic surrealism.
+</p>
                             <button class="px-3 py-1 bg-primary-red text-black font-semibold rounded-full text-xs hover:bg-white transition">
                                 VIEW DETAILS
                             </button>
@@ -688,4 +689,5 @@
     </script>
        </body>
 </html>
+
 
