--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <!-- MOVIE CARD 5 - "RAT" -->
                 <div class="card-wrapper rounded-lg" tabindex="0" data-title="RAT" data-year="2020" data-role="Voice Actor">
                     <div class="movie-card">
-                        <img src="rat.png" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=RAT'" alt="Ghost in the Machine Poster">
+                        <img src="abdus.png" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=RAT'" alt="Ghost in the Machine Poster">
                     </div>
                     <!-- New Horizontal Detail Panel -->
                     <div class="horizontal-pop-up flex p-4 shadow-2xl">
@@ -419,7 +419,7 @@
                             <h3 class="text-xl sm:text-2xl font-bold text-primary-red">RAT</h3>
                             <p class="text-xs">2020 | ROLE: VOICE ACTOR</p>
                             <p class="text-sm italic">
-                                DESCRIPTION: Critically acclaimed sci-fi thriller about artificial consciousness and sentience.
+                                DESCRIPTION: Critically aclaimed Documentary of the life of rebellious Genius Abdus Salam.
                             </p>
                             <button class="px-3 py-1 bg-primary-red text-black font-semibold rounded-full text-xs hover:bg-white transition">
                                 VIEW DETAILS
@@ -678,6 +678,7 @@
     </script>
        </body>
 </html>
+
 
 
 
