--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <!-- MOVIE CARD 5 - "RAT" -->
                 <div class="card-wrapper rounded-lg" tabindex="0" data-title="RAT" data-year="2020" data-role="Voice Actor">
                     <div class="movie-card">
-                        <img src="abdus.png" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=RAT'" alt="Ghost in the Machine Poster">
+                        <img src="abdus.jpg" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=RAT'" alt="Ghost in the Machine Poster">
                     </div>
                     <!-- New Horizontal Detail Panel -->
                     <div class="horizontal-pop-up flex p-4 shadow-2xl">
@@ -678,6 +678,7 @@
     </script>
        </body>
 </html>
+
 
 
 
