--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     <!-- New Horizontal Detail Panel -->
                     <div class="horizontal-pop-up flex p-4 shadow-2xl">
                         <div class="w-2/5 h-full rounded-l-md overflow-hidden mr-4">
-                             <img src="rat.png" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=RAT'" alt="Ghost in the Machine Preview" class="w-full h-full object-cover">
+                             <img src="abdus.jpg" onerror="this.src='https://placehold.co/400x600/181818/E50914?text=RAT'" alt="Ghost in the Machine Preview" class="w-full h-full object-cover">
                         </div>
                         <div class="w-3/5 space-y-2">
                             <h3 class="text-xl sm:text-2xl font-bold text-primary-red">RAT</h3>
@@ -668,7 +668,7 @@
     document.querySelector('[data-title="Psychological Neurosis in Pakistan"] img:first-child').src = "psycho.png";
     document.querySelector('[data-title="Psychological Neurosis in Pakistan"] .horizontal-pop-up img').src = "psycho.png";
     document.querySelector('[data-title="RAT"] img:first-child').src = "rat.png";
-    document.querySelector('[data-title="RAT"] .horizontal-pop-up img').src = "rat.png";
+    document.querySelector('[data-title="RAT"] .horizontal-pop-up img').src = "abdus.png";
     document.querySelector('[data-title="REGRET"] img:first-child').src = "ragret.png";
     document.querySelector('[data-title="REGRET"] .horizontal-pop-up img').src = "ragret.png";
     document.querySelector('[data-title="Medhat: A Life in Picture"] img:first-child').src = "medhat.png";
@@ -678,6 +678,7 @@
     </script>
        </body>
 </html>
+
 
 
 
