--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@
     document.querySelector('[data-title="A Life in Pardah"] .horizontal-pop-up img').src = "life.png";
     document.querySelector('[data-title="Psychological Neurosis in Pakistan"] img:first-child').src = "psycho.png";
     document.querySelector('[data-title="Psychological Neurosis in Pakistan"] .horizontal-pop-up img').src = "psycho.png";
-    document.querySelector('[data-title="RAT"] img:first-child').src = "rat.png";
-    document.querySelector('[data-title="RAT"] .horizontal-pop-up img').src = "abdus.png";
+    document.querySelector('[data-title="RAT"] img:first-child').src = "abdus.jpg";
+    document.querySelector('[data-title="RAT"] .horizontal-pop-up img').src = "abdus.jpg";
     document.querySelector('[data-title="REGRET"] img:first-child').src = "ragret.png";
     document.querySelector('[data-title="REGRET"] .horizontal-pop-up img').src = "ragret.png";
     document.querySelector('[data-title="Medhat: A Life in Picture"] img:first-child').src = "medhat.png";
@@ -678,6 +678,7 @@
     </script>
        </body>
 </html>
+
 
 
 
